# Networkx-mcp

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  client.py  justfile  main.py  pyproject.toml
data/: example_graph.json  sample_graph_attr.json  sap_supergraph.json
src/: cache.py  classes.py  resources.py  tools.py
src/base/: base.py  graph_analytics.py
tests/: test_graph.py  test_mcp_tools.py  test_resources.py
